# openapi-generator

./: .editorconfig  Cargo.toml  README.md
cli/: Cargo.toml
core/: Cargo.toml
core/res/: petstore.yml
core/src/: error.rs  lib.rs
core/src/domain/: mod.rs
core/src/oas/: mod.rs
core/tests/: integration_test.rs
example/: Cargo.toml
example/src/: app.rs  main.rs
example/src/model/: mod.rs
example/src/route/: mod.rs  pet.rs
template/: Cargo.toml
