[package]
name = "openapi-generator-cli"
version = "0.1.0"
authors = ["Wykiki <jmegaplay@hotmail.fr>"]
keywords = ["openapi", "generator"]
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "openapi-generator-cli"
path = "src/main.rs"

[dependencies]
