[workspace]

[package]
name = "example"
version = "0.1.0"
authors = ["Wykiki <jmegaplay@hotmail.fr>"]
keywords = ["openapi", "generator"]
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-cors = "0.2.0"
actix-service = "1.0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
